[gd_scene load_steps=4 format=3 uid="uid://bic00e40n4ase"]

[ext_resource type="Script" uid="uid://cdtj50dwomes0" path="res://scripts/mouse.gd" id="1_5v7j2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v7j2"]
size = Vector2(30, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouscy"]
size = Vector2(14, 3)

[node name="Mouse" type="CharacterBody2D"]
script = ExtResource("1_5v7j2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -10.0
offset_right = 4.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329412, 0.517647, 0.623529, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -10.0
offset_right = 14.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color(0.329292, 0.517001, 0.62248, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -13.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = 10.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_5v7j2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-7, -11.5)
shape = SubResource("RectangleShape2D_ouscy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(-7, 11.5)
shape = SubResource("RectangleShape2D_ouscy")

[node name="FrontProx" type="RayCast2D" parent="."]
position = Vector2(14, 0)
target_position = Vector2(12.5, 0)

[node name="RightProx" type="RayCast2D" parent="."]
position = Vector2(4, 10)
target_position = Vector2(0, 20)

[node name="LeftProx" type="RayCast2D" parent="."]
position = Vector2(4, -10)
target_position = Vector2(0, -20)
